wifi(config): setup wifi in webserver

--- a/platformio.ini
+++ b/platformio.ini
@@ -32,3 +32,7 @@ lib_deps =
 	gilmaimon/ArduinoWebsockets @ ^0.5.3
 	bodmer/TJpg_Decoder@^1.1.0
 	miguelbalboa/MFRC522@^1.4.12
+	knolleary/PubSubClient@^2.8
+build_flags =
+    -I include
+    -I lib
