--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ board = esp32cam
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-src_filter = +<client/>
+build_src_filter = +<client/>
 lib_deps = 
 	gilmaimon/ArduinoWebsockets @ ^0.5.3
 
@@ -24,7 +24,7 @@ board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-src_filter = +<server/>
+build_src_filter = +<server/>
 lib_deps = 
 	adafruit/Adafruit Fingerprint Sensor Library @ ^2.1.2
 	bodmer/TFT_eSPI @ ^2.5.33
