--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ upload_speed = 921600
 build_src_filter = +<client/>
 lib_deps = 
 	gilmaimon/ArduinoWebsockets @ ^0.5.3
+	adafruit/Adafruit PN532@^1.3.4
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
@@ -33,6 +34,7 @@ lib_deps =
 	bodmer/TJpg_Decoder@^1.1.0
 	miguelbalboa/MFRC522@^1.4.12
 	knolleary/PubSubClient@^2.8
+	adafruit/Adafruit PN532@^1.3.4
 build_flags = 
 	-I include
 	-I lib
